hr added and set 2 panels

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
       <h1>KPI Dashboard</h1>
     </div>
 
+    <hr>
+    
     <div class="dashboard-left">
       <div class="panel">
-        
+
+      </div>
+      <div class="panel">
+
       </div>
     </div>
 
