add icon and flexbox align

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <body>
 
     <div class="header">
-      <img src="./assets/img/logo-alpogo.png" alt="logo alpogo">
-      <h1>KPI Dashboard</h1>
+      <a href="https://alpogo.com" target="_blank" ><img src="./assets/img/logo-alpogo.png" alt="logo alpogo"></a>
     </div>
+      <div class="title"><img src="./assets/img/speedometer.svg" alt="icon">
+        <p>KPI Dashboard</p>
+      </div>
 
     <hr>
-    
+
     <div class="dashboard-left">
       <div class="panel">
 
