--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
             <div class="col-lg-3">
                   <div class="dashboard-left">
                     <div class="panel">
-
+                      <h3>Users</h3>
+                      <p>67209</p>
                     </div>
                   </div>
             </div>
             <div class="col-lg-3">
                   <div class="dashboard-right">
                     <div class="panel">
-
+                      <h3>Sales today</h3>
+                      <p>$12695</p>
                     </div>
                   </div>
             </div>
@@ -54,14 +56,16 @@
           <div class="col-lg-3">
                 <div class="dashboard-left">
                   <div class="panel">
-
+                    <h3>Active events</h3>
+                    <p>102</p>
                   </div>
                 </div>
           </div>
           <div class="col-lg-3 ">
                 <div class="dashboard-right">
                   <div class="panel">
-
+                    <h3>Events today</h3>
+                    <p>3</p>
                   </div>
                 </div>
           </div>
