--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./assets/css/dashboard.css">
-     <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   </head>
   <body>
@@ -80,6 +80,23 @@
 
     <div class="col-lg-6">
       <div class="panel-long">
+        <div class="container">
+          <div class="city-list">
+            <h3>Users by city</h3>
+            <ol>
+              <li>Córdoba</li>
+              <li>Buenos Aires</li>
+              <li>Rosario</li>
+              <li>La Plata</li>
+              <li>Neuquén</li>
+              <li>Mar del Plata</li>
+              <li>Trelew</li>
+              <li>Bahía Blanca</li>
+              <li>Montevideo</li>
+            </ol>
+          </div>
+        </div>
+
 
       </div>
     </div>
