style change to correct city-list

--- a/index.html
+++ b/index.html
@@ -15,111 +15,96 @@
 
 <body>
 
-  <div class="wrapper">
-    <div class="header">
-      <a href="https://alpogo.com" target="_blank" ><img src="./assets/img/logo-alpogo.png" alt="logo alpogo"></a>
+  <div class="header">
+    <a href="https://alpogo.com" target="_blank" ><img src="./assets/img/logo-alpogo.png" alt="logo alpogo"></a>
 
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="title"><img src="./assets/img/speedometer.svg" alt="icon">
-                <p>KPI Dashboard</p>
-            </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="title"><img src="./assets/img/speedometer.svg" alt="icon">
+            <p>KPI Dashboard</p>
           </div>
         </div>
       </div>
-
     </div>
-
-    <hr>
-
-    <div class="wrapper">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-
-            <!-- columna panel izquierda -->
-
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-3">
-                  <div class="dashboard-left">
-                    <div class="panel">
-                      <h3>Users</h3>
-                      <p>67209</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-3">
-                  <div class="dashboard-right">
-                    <div class="panel">
-                      <h3>Sales today</h3>
-                      <p>$12695</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="container">
-              <div class="row">
-
-                <div class="col-lg-3">
-                  <div class="dashboard-left">
-                    <div class="panel">
-                      <h3>Active events</h3>
-                      <p>102</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-3 ">
-                  <div class="dashboard-right">
-                    <div class="panel">
-                      <h3>Events today</h3>
-                      <p>3</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-
-          <!-- columna panel derecho -->
-
-          <div class="col-lg-6">
-            <div class="panel-long">
-              <div class="container">
-                <div class="city-list">
-                  <h3>Users by city</h3>
-                  <ol>
-                    <li>Córdoba</li>
-                    <li>Buenos Aires</li>
-                    <li>Rosario</li>
-                    <li>La Plata</li>
-                    <li>Neuquén</li>
-                    <li>Mar del Plata</li>
-                    <li>Trelew</li>
-                    <li>Bahía Blanca</li>
-                    <li>Montevideo</li>
-                  </ol>
-                </div>
-              </div>
-
-
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
 
   </div>
 
+  <!-- <hr> -->
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+
+        <!-- columna panel izquierda -->
+
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="dashboard-left">
+                <div class="panel">
+                  <h3>Users</h3>
+                  <p>67209</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="dashboard-right">
+                <div class="panel">
+                  <h3>Sales today</h3>
+                  <p>$12695</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
+        <div class="container">
+          <div class="row">
+
+            <div class="col-lg-3">
+              <div class="dashboard-left">
+                <div class="panel">
+                  <h3>Active events</h3>
+                  <p>102</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 ">
+              <div class="dashboard-right">
+                <div class="panel">
+                  <h3>Events today</h3>
+                  <p>3</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <!-- columna panel derecho -->
+      <div class="box-right">
+          <div class="col-lg-6">
+            <div class="city-list">
+              <h3>Users by city</h3>
+              <ol>
+                <li>Córdoba</li>
+                <li>Buenos Aires</li>
+                <li>Rosario</li>
+                <li>La Plata</li>
+                <li>Neuquén</li>
+                <li>Mar del Plata</li>
+                <li>Trelew</li>
+                <li>Bahía Blanca</li>
+                <li>Montevideo</li>
+              </ol>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
 
   <!-- jquery CDN -->
 
