--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
     </div>
   </div>
 
+  <div class="status-box">
+    <p>Status site: <span id="site-status">Active</span></p>
+    <p>Status API: <span id="api-status">Sleep</span></p>
+  </div>
+
   <!-- jquery CDN -->
 
   <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous">
