add new index section, improve style of login, make prototype with links

--- a/login.html
+++ b/login.html
@@ -16,9 +16,7 @@
 
 <body>
 
-  <div class="warning-sign">
-    <p> *** This site is for authorize access only *** </p>
-  </div>
+  <div class="alert alert-danger" role="alert">*** This site is for authorize access only ***</div>
 
   <div class="container login">
     <div class="row">
@@ -36,19 +34,9 @@
           </div>
 
           </div>
-          <button type="submit" class="btn btn-success">Sign in</button>
+          <a type="submit" class="btn btn-success" href="app.html">Sign in</a>
         </form>
-
-      </div>
-    </div>
-
-    <div class="footer-login">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-              <a href="https://alpogo.com" target="_blank" ><img src="./assets/img/logo-alpogo.png" alt="logo alpogo"></a>
-          </div>
-        </div>
+          <a href="https://alpogo.com" target="_blank" class="alpogo-logo" ><img src="./assets/img/logo-alpogo.png" alt="logo alpogo"></a>
       </div>
     </div>
 
