--- a/index.html
+++ b/index.html
@@ -11,110 +11,73 @@
   <link rel="stylesheet" href="./assets/css/dashboard.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
 </head>
 
 <body>
 
-    <div class="header">
-      <a href="https://alpogo.com" target="_blank" ><img src="./assets/img/logo-alpogo.png" alt="logo alpogo"></a>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
 
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="title"><img src="./assets/img/speedometer.svg" alt="icon">
-              <p>KPI Dashboard</p>
-            </div>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <div class="carousel-caption">
+          <div class="align-col">
+            <h3>Know your metrics</h3>
+            <p>You control your business.</p>
           </div>
-        </div>
+      </div>
+        <img src="assets/img/slider/metrics.jpg" alt="metrics">
+      </div>
+
+      <div class="item">
+        <div class="carousel-caption">
+          <div class="align-col">
+            <h3>Build your startup</h3>
+            <p>Keep your eyes on the prize.</p>
+          </div>
+      </div>
+        <img src="assets/img/slider/build.jpg" alt="build">
+      </div>
+
+      <div class="item">
+        <div class="carousel-caption">
+          <div class="align-col">
+            <h3>The world is your office</h3>
+            <p>We got your status, anywhere.</p>
+          </div>
+      </div>
+        <img src="assets/img/slider/portable.jpg" alt="portable">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+  <div class="container go-to-dash">
+    <div class="row">
+      <div class="col-lg-12">
+        <h2>Go to your dashboard</h2>
+        <a class="btn btn-default" name="button" href="login.html">Let's go!</a>
       </div>
 
     </div>
 
-    <!-- <hr> -->
-
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-
-          <!-- columna panel izquierda -->
-
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-3">
-                <div class="dashboard-left">
-                  <div class="panel">
-                    <h3>Users</h3>
-                    <p>67209</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3">
-                <div class="dashboard-right">
-                  <div class="panel">
-                    <h3>Sales today</h3>
-                    <p>$12695</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="container">
-            <div class="row">
-
-              <div class="col-lg-3">
-                <div class="dashboard-left">
-                  <div class="panel">
-                    <h3>Active events</h3>
-                    <p>102</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3 ">
-                <div class="dashboard-right">
-                  <div class="panel">
-                    <h3>Events today</h3>
-                    <p>3</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-        <!-- columna panel derecho -->
-        <div class="box-right">
-            <div class="col-lg-6">
-              <div class="city-list">
-                <h3>Users by city</h3>
-                <ol>
-                  <li>Córdoba</li>
-                  <li>Buenos Aires</li>
-                  <li>Rosario</li>
-                  <li>La Plata</li>
-                  <li>Neuquén</li>
-                  <li>Mar del Plata</li>
-                  <li>Trelew</li>
-                  <li>Bahía Blanca</li>
-                  <li>Montevideo</li>
-                </ol>
-              </div>
-            </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- <footer class="footer">
-      <div class="container">
-        <div class="status-box">
-          <p>Status site: <span id="site-status">Active</span>
-          Status API: <span id="api-status">Sleep</span></p>
-        </div>
-      </div>
-    </footer> -->
-
+  </div>
 
   <!-- jquery CDN -->
 
