--- a/login.html
+++ b/login.html
@@ -24,19 +24,20 @@
         <h1>Please login to see the dashboard</h1>
         <p>If you don't have an account reach us out to dashboard@alpogo.com</p>
 
-        <form>
+        <form action="app.html">
           <div class="form-group">
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="user@alpogo.com">
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="user@alpogo.com" required>
           </div>
 
           <div class="form-group">
-            <input type="password" class="form-control" id="Password" placeholder="Password">
+            <input type="password" class="form-control" id="Password" placeholder="Password" required>
           </div>
 
           </div>
-          <a type="submit" class="btn btn-success" href="app.html">Sign in</a>
+          <input type="submit" class="btn btn-success" value="Sign in" href="app.html"></input>
         </form>
           <a href="https://alpogo.com" target="_blank" class="alpogo-logo" ><img src="./assets/img/logo-alpogo.png" alt="logo alpogo"></a>
+          <p>This beta version will be released only for alpogo.com admin users. If you want to be updated when public version is released, please suscribe below.</p>
       </div>
     </div>
 
