--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
           <input type="submit" class="btn btn-success" value="Sign in" href="app.html"></input>
         </form>
           <a href="https://alpogo.com" target="_blank" class="alpogo-logo" ><img src="./assets/img/logo-alpogo.png" alt="logo alpogo"></a>
-          <p>This beta version will be released only for alpogo.com admin users. If you want to be updated when public version is released, please suscribe below.</p>
+          <p>This beta version will be released only for alpogo.com admin users. If you want to be updated when public version is released, please <a href="#">suscribe here.</a></p>
       </div>
     </div>
 
