added info about the project usability

--- a/index.html
+++ b/index.html
@@ -74,9 +74,51 @@
         <h2>Go to your dashboard</h2>
         <a class="btn btn-default" name="button" href="login.html">Let's go!</a>
       </div>
+    </div>
+  </div>
+
+  <div class="container benefits">
+    <div class="row">
+
+      <div class="col-lg-4 col-md-6 col-sm-12 center-block">
+        <div class="box-benefit">
+          <h2>Set your own KPI</h2>
+          <p>You know what's best for your start up, define your KPI and keep track of every detail of your operation.</p>
+          <img src="assets/img/browser.svg" alt="browser">
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 col-sm-12 center-block">
+        <div class="box-benefit">
+          <h2>Choose your profile</h2>
+          <p>CEO? CFO? CTO? You get your own dashboard according to your professional profile.</p>
+          <img src="assets/img/analytics.svg" alt="browser">
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 col-sm-12 center-block">
+        <div class="box-benefit">
+          <h2>AFK friendly</h2>
+          <p>Go away. Your analytics will be here all the time. Check your phone and keep the engine runing.</p>
+          <img src="assets/img/tablet.svg" alt="browser">
+        </div>
+      </div>
 
     </div>
+  </div>
+<!--
+  <div class="container love">
+    <div class="row">
+      <div class="col-lg-12">
+          <h3>we love startups</h3>
+          <img src="assets/img/love.svg" alt="welovestartups">
+      </div>
+    </div>
+  </div> -->
 
+  <div class="love">
+    <h3>we love startups</h3>
+    <img src="assets/img/love.svg" alt="">
   </div>
 
   <!-- jquery CDN -->
