add footer with logos

--- a/index.html
+++ b/index.html
@@ -112,6 +112,21 @@
     <img src="assets/img/love.svg" alt="">
   </div>
 
+  <div class="container sponsors">
+    <div class="row">
+      <div class="col-md-4 col-sm-12">
+        <img class="img-responsive center-block" src="assets/img/sponsors/startupweekend.png" alt="startupweekend">
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <img class="img-responsive center-block" src="assets/img/sponsors/amazon-activate.png" alt="aws">
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <img class="img-responsive center-block" id="red-hat" src="assets/img/sponsors/red-hat.png" alt="redhat">
+      </div>
+    </div>
+  </div>
+
+
   <!-- jquery CDN -->
 
   <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous">
