--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="row">
       <div class="col-lg-12">
         <h2>Go to your dashboard</h2>
-        <a class="btn btn-default" name="button" href="login.html">Let's go!</a>
+        <a class="btn btn-default" href="login.html">Let's go!</a>
       </div>
     </div>
   </div>
