--- a/login.html
+++ b/login.html
@@ -32,16 +32,17 @@
           <div class="form-group">
             <input type="password" class="form-control" id="Password" placeholder="Password" required>
           </div>
-
-          </div>
-          <input type="submit" class="btn btn-success" value="Sign in" href="app.html"></input>
+          <input type="submit" class="btn btn-success" value="Sign in">
         </form>
-          <a href="https://alpogo.com" target="_blank" class="alpogo-logo" ><img src="./assets/img/logo-alpogo.png" alt="logo alpogo"></a>
-          <p>This beta version will be released only for alpogo.com admin users. If you want to be updated when public version is released, please <a href="#">suscribe here.</a></p>
+
+        </div>
       </div>
     </div>
 
-  </div>
-</body>
+    <div>
+      <a href="https://alpogo.com" target="_blank" class="alpogo-logo" ><img src="./assets/img/logo-alpogo.png" alt="logo alpogo"></a>
+      <p>This beta version will be released only for alpogo.com admin users. If you want to be updated when public version is released, please <a href="#">suscribe here.</a></p>
+    </div>
 
+</body>
 </html>
