--- a/index.html
+++ b/index.html
@@ -68,13 +68,9 @@
     </a>
   </div>
 
-  <div class="container go-to-dash">
-    <div class="row">
-      <div class="col-lg-12">
-        <h2>Go to your dashboard</h2>
-        <a class="btn btn-default" href="login.html">Let's go!</a>
-      </div>
-    </div>
+  <div class="go-to-dash">
+    <h2>Go to your dashboard</h2>
+    <a class="btn btn-default" href="login.html">Let's go!</a>
   </div>
 
   <div class="container benefits">
@@ -90,7 +86,7 @@
 
       <div class="col-lg-4 col-md-6 col-sm-12 center-block">
         <div class="box-benefit">
-          <h2>Choose your profile</h2>
+          <h2>Choose a profile</h2>
           <p>CEO? CFO? CTO? You get your own dashboard according to your professional profile.</p>
           <img src="assets/img/analytics.svg" alt="browser">
         </div>
