Change minor text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="carousel-caption">
           <div class="align-col">
             <h3>Know your metrics</h3>
-            <p>You control your business.</p>
+            <p>You control your business!</p>
           </div>
       </div>
         <img src="assets/img/slider/metrics.jpg" alt="metrics">
